z-index fixing

--- a/style.css
+++ b/style.css
@@ -401,7 +401,7 @@ Text Domain: core
 		top:55px;
 		left:0;
 		width:200px;
-		z-index:99999;    
+		z-index:9999999;    
 		background:#252525;
 		box-shadow:0px 2px 5px rgba(0, 0, 0, 0.8);
 		-webkit-box-shadow:0px 2px 5px rgba(0, 0, 0, 0.8);    
